--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-parallax-tilt": "^1.7.229",
     "react-router-dom": "^6.24.0",
-    "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.149.0"
+    "three": "^0.166.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
